Fixed visibility

--- a/src/components/scrollUp/styles.scss
+++ b/src/components/scrollUp/styles.scss
@@ -25,9 +25,11 @@
   @include respond-to(lg) {
     display: block;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    visibility: hidden;
+    transition: opacity 0.5s, visibility 0.5s ease-in-out;
     &.visible {
       opacity: 1;
+      visibility: visible;
     }
   }
 }
